Cambio en la rama master

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Primera pagina</title>
 </head>
 <body>
-    <h1>Cambio de nombre</h1>
+    <h1>Cambio rama master </h1>
 </body>
 </html>
