Cambio en la rama desarrollo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Primera pagina</title>
 </head>
 <body>
-    
+    <h2>Cambio en la rama desarrollo</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt possimus inventore consectetur sequi odit perferendis alias quis temporibus nostrum aut.</p>
 </body>
 </html>
