--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
 
 
-    <h2>Cambio en la rama desarrollo</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt possimus inventore consectetur sequi odit perferendis alias quis temporibus nostrum aut.</p>
+    <h1>Cambio de la rama master y usuarios</h1>
 
 </body>
 </html>
